@@ -1,5 +1,10 @@
 2017-03-31  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/79572
+	* cp-gimplify.c (cp_genericize_r): Sanitize INTEGER_CSTs with
+	REFERENCE_TYPE.  Adjust ubsan_maybe_instrument_reference caller
+	for NOP_EXPR to REFERENCE_TYPE.
+
 	PR libstdc++/80251
 	* cp-tree.h (enum cp_trait_kind): Add CPTK_IS_AGGREGATE.
 	* cxx-pretty-print.c (pp_cxx_trait_expression): Handle
