@@ -1,3 +1,8 @@
+2017-03-31  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/79572
+	* g++.dg/ubsan/null-8.C: New test.
+
 2017-03-31  Pat Haugen  <pthaugen@us.ibm.com>
 
 	PR target/80107
